traefik/auth.yaml
# Declaring the user list
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-auth
spec:
  digestAuth:
    secret: traefik-auth-digest
