traefik/middlewares.yaml
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-scheme-https
spec:
  redirectScheme:
    scheme: https
